Added Modifications tab for component mods.

--- a/lang/en.json
+++ b/lang/en.json
@@ -33,6 +33,7 @@
   , "nav":
     { "summary": "Summary"
     , "components": "Components"
+    , "modifications": "Modifications"
     , "cargo": "Cargo"
     , "notes": "Notes"
     }
