Switches onboard weapons section to notes

--- a/lang/en.json
+++ b/lang/en.json
@@ -51,6 +51,7 @@
     , "fuelCap": "Fuel Capacity"
     , "rammingDamage": "RAMMING DAMAGE"
     , "onboardWeapons": "ONBOARD WEAPONS"
+    , "notes": "Write notes about your onboard weapons here."
     }
   
   , "componentsPage":
