--- a/lang/en.json
+++ b/lang/en.json
@@ -66,7 +66,9 @@
     }
   
   , "modificationsPage":
-    { "engineIR": "Engine IR"
+    { "header": "MODIFICATIONS LIST"
+    , "empty": "This vehicle has no installed modifications."
+    , "engineIR": "Engine IR"
     , "transmissionIR": "Transmission IR"
     , "chassisIR": "Chassis IR"
     , "suspensionIR": "Suspension IR"
@@ -86,7 +88,6 @@
     , "hoursOfOperation": "Hours of Operation"
     , "fuelCapacity": "Fuel Capacity"
     , "weight": "Weight"
-    , "header": "MODIFICATIONS LIST"
     }
 
   , "cargoPage":
