Styles and preps cargo page for new system

--- a/lang/en.json
+++ b/lang/en.json
@@ -98,12 +98,11 @@
   , "cargoPage":
     { "crewWeight": "Crew Weight"
     , "cargoWeight": "Cargo Weight"
+    , "manifest": "CARGO MANIFEST"
     , "cargoItem": "CARGO ITEM"
-    , "carried": "CARRIED"
-    , "eachWeight": "EA WT"
-    , "quantity": "QTY"
-    , "weight": "WT"
+    , "weight": "LBS"
     , "notes": "Write notes about your cargo here."
+    , "empty": "This vehicle is not hauling any cargo."
     }
   
   , "stats":
