Adds dialog popup for making a Push check

--- a/lang/en.json
+++ b/lang/en.json
@@ -195,5 +195,14 @@
       , "magical": "Magical"
       }
     }
+
+  , "chat":
+    { "push": "PUSH"
+    , "roll": "ROLL"
+    , "cancel": "CANCEL"
+    , "options":
+      { "pilotIR": "Pilot's Integrity Resistance"
+      }
+    }
   }
 }
